2003-06-11  Sebastien Pouliot  <spouliot@videotron.ca>

	* AllTests2.cs: Converted tests to NUnit2 format.
	* RSACryptoServiceProviderTest.cs: Converted tests to NUnit2 format.
	* RSAPKCS1KeyExchangeDeformatterTest.cs: Converted tests to NUnit2 format.
	* RSAPKCS1KeyExchangeFormatterTest.cs: Converted tests to NUnit2 format.
	* RSAPKCS1SignatureDeformatterTest.cs: Converted tests to NUnit2 format.
	* RSAPKCS1SignatureFormatterTest.cs: Converted tests to NUnit2 format.

2003-05-29  Sebastien Pouliot  <spouliot@videotron.ca>

	* PKCS1MaskGenerationMethodTest.cs: Added [Ignore] to vector test
	(as it's result isn't valid on both framework 1.0 and 1.1).
	* RSAPKCS1SignatureDeformatter.cs: Splitting the test for NUnit2
	cloned the previous error into many more tests. Hopefully fixed.

2003-05-28  Sebastien Pouliot  <spouliot@videotron.ca>

	* RSAPKCS1SignatureDeformatter.cs: Fixed (well I hope so) a test
	which doesn't throw the same exception under 1.1. Also converted 
	the tests to NUnit2 format.

2003-05-12  Sebastien Pouliot  <spouliot@videotron.ca>

	* PKCS1MaskGenerationMethodTest.cs: Uncommented PKCS#1 v.2.1 vector 
	unit test (will work on Mono but fails with MS implementation).
	* RSAOAEPKeyExchangeDeformatterTest.cs: Updated tests vectors for
	both Mono and MS (under Windows XP) generated OAEP results.
	* RSAOAEPKeyExchangeFormatterTest.cs: Update exception handling.

2003-04-17  Nick Drochak  <ndrochak@gol.com>

	* DSATest.cs: Use nunit version 2 style to test throw.
	* HMACSHA1Test.cs: Eliminate compiler warning.

2003-03-04  Sebastien Pouliot  <spouliot@videotron.ca>

	* CryptoConfigTest.cs: Added new tests for algorithms 
	documented in book ".NET Framework Security".

2003-02-03  Sebastien Pouliot  <spouliot@videotron.ca>

	* PasswordDeriveBytesTest.cs: Added some new tests to complete 
	coverage.
	* RSAPKCS1SignatureDeformatterTest.cs: Added test for null and 
	invalid	hash algorithm.

2003-01-19  Sebastien Pouliot  <spouliot@videotron.ca>
